# qtsingleapplication

./: CMakeLists.txt  files.cmake  qtlocalpeer.h  qtlockedfile.h  qtsingleapplication.h  qtsingleapplicationConfig.cmake.in
